; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-bson.c_bson_destroy.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-bson.c_bson_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bson = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bson*)* @bson_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bson_destroy(%struct.bson* %0) #0 {
  %2 = alloca %struct.bson*, align 8
  store %struct.bson* %0, %struct.bson** %2, align 8
  %3 = load %struct.bson*, %struct.bson** %2, align 8
  %4 = getelementptr inbounds %struct.bson, %struct.bson* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.bson*, %struct.bson** %2, align 8
  %7 = getelementptr inbounds %struct.bson, %struct.bson* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %5, %8
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load %struct.bson*, %struct.bson** %2, align 8
  %12 = getelementptr inbounds %struct.bson, %struct.bson* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = call i32 @free(i64 %13)
  br label %15

15:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @free(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
